# ekg

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  mainwindow.qml  mainwindow.ui  root.cpp  root.h
.github/workflows/: test.yaml
include/bridge/: ekg_controller.h
include/dto/: filter_method.h  heart_class_result.h  hrv_dfa_metrics.h  hrv_geo_metrics.h  hrv_time_metrics.h  r_peaks_detection_method.h  signal_range.h  status.h
include/model/: r_peaks_annotated_signal_datapoint.h  signal_datapoint.h  signal_dataset.h  wave_annotated_signal_datapoint.h
include/repository/: csv_signal_repository.h  dat_signal_repository.h  signal_repository.h
include/repository/abstract/: signal_repository.h
include/service/: application_service.h  butterworth_filter_service.h  filter_service.h  heart_class_detection_service.h  hrv_dfa_processing_service.h  hrv_geo_processing_service.h  hrv_time_processing_service.h  moving_average_filter_service.h  r_peaks_detection_service.h  waves_detection_service.h
include/service/abstract/: application_service.h  filter_service.h  heart_class_detection_service.h  hrv_dfa_processing_service.h  hrv_geo_processing_service.h  hrv_time_processing_service.h  r_peaks_detection_service.h  waves_detection_service.h
src/bridge/: ekg_controller.cpp
src/repository/: csv_signal_repository.cpp  dat_signal_repository.cpp  signal_repository.cpp
src/service/: application_service.cpp  butterworth_filter_service.cpp  heart_class_detection_service.cpp  hrv_dfa_processing_service.cpp  hrv_geo_processing_service.cpp  hrv_time_processing_service.cpp  moving_average_filter_service.cpp  r_peaks_detection_service.cpp  waves_detection_service.cpp
uml/: application_service_uml.puml  architecture_overview.puml  build.sh  dependency_injection_diagram.puml  initialization_sequence.puml
